# AnitoWave_SPH

./: .gitignore  .gitmodules  CMakeLists.txt
include/: bgfx_utils.h  sph.cuh
shaders/: fs_particles.sc  varying.def.sc  vs_particles.sc
src/: bgfx_utils.cpp  main.cu  sph.cu
